[tool.poetry]
name = "xmas-leaderboard"
version = "0.1.0"
description = ""
authors = ["avekassy1 <vekassy.andras@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
